@@ -1,4 +1,4 @@
-# version: 20190310190601
+# version: 20190311013701
 users-user	User ID	<QXZ>This field is where you put the users ID number, can be up to 8 digits in length, Must be at least 2 characters in length.</QXZ>
 users-pass	Password	<QXZ>This field is where you put the users password. Must be at least 2 characters in length. A medium strength user password will be at least 10 characters in length, and a strong user password will be at least 20 characters in length and have letters as well as at least one number. It is recommended that you use a longer password if possible, stringing together several unrelated words with no spaces, and a number somewhere in the string. The maximum size of a password is 100 characters.</QXZ>
 users-force_change_password	Force Change Password	<QXZ>If this option is set to Y then the user will be prompted to change their password the next time they log in to the administration webpage. Default is N.</QXZ>
@@ -216,7 +216,7 @@ campaigns-campaign_recording	Campaign Recording	<QXZ>This menu allows you to cho
 campaigns-campaign_rec_filename	Campaign Rec Filename	<QXZ>This field allows you to customize the name of the recording when Campaign recording is ONDEMAND or ALLCALLS. The allowed variables are CAMPAIGN INGROUP CUSTPHONE FULLDATE TINYDATE EPOCH AGENT VENDORLEADCODE LEADID CALLID RECID. If your dialers have --POST recording processing enabled, you can also use POSTVLC POSTSP POSTARRD3 POSTSTATUS. These POST options will alter the recording file name after the call has been finished and will replace the post variable with the value from the default fields. The default is FULLDATE_AGENT and would look like this 20051020-103108_6666. Another example is CAMPAIGN_TINYDATE_CUSTPHONE which would look like this TESTCAMP_51020103108_3125551212. The resulting filename must be less than 90 characters in length.</QXZ>
 campaigns-allcalls_delay	Recording Delay	<QXZ>For ALLCALLS and ALLFORCE recording only. This setting will delay the starting of the recording on all calls for the number of seconds specified in this field. Default is 0.</QXZ>
 campaigns-routing_initiated_recordings	Routing Initiated Recording	<QXZ>This option, if enabled, allows you to have the call routing script for Outbound auto-dial calls trigger the agent call recording instead of the agent screen. This option will only work if the recording option is set to ALLCALLS or ALLFORCE. This will work with agent manual dialed calls only if the recording delay is also set to 0. Default is N for disabled.</QXZ>
-campaigns-mute_recordings	Mute Recording Button	<QXZ>This option, if enabled, will make the MUTE RECORDING button appear on the agent screen below the existing recording button. If a recording is muted, it will record silence until the MUTE RECORDING is clicked a second time. Default is N for disabled.</QXZ>
+campaigns-mute_recordings	Mute Recording Button	<QXZ>This option, if enabled, will make the MUTE RECORDING button appear on the agent screen below the existing recording button. If a recording is muted, it will record silence or pause the recording until the MUTE RECORDING button is clicked a second time. You should not mute recordings for more than 15 minutes at a time. Default is N for disabled.</QXZ>
 campaigns-per_call_notes	Call Notes Per Call	<QXZ>Setting this option to ENABLED will allow agents to enter in notes for every call they handle in the agent interface. The notes entry field will appear below the Comments field in the agent interface. Also, if the Agent User Group is allowed to view Call Logs then the agent will be able to view past call notes for a lead at any time. Default is DISABLED.</QXZ>
 campaigns-comments_all_tabs	Comments All Tabs	<QXZ>Setting this option to ENABLED will display the Comments field on all tabs in the main agent screen. Default is DISABLED.</QXZ>
 campaigns-comments_dispo_screen	Comments Dispo Screen	<QXZ>Setting this option to ENABLED will display the Comments field at the top of the agent disposition screen. If the REPLACE_CALL_NOTES option is selected, then the Comments field will replace the Call Notes field on the disposition screen if Per Call Notes is enabled. Default is DISABLED.</QXZ>
@@ -1037,7 +1037,7 @@ settings-chat_url	Chat URL	<QXZ>This is the location where you have placed the c
 settings-agent_push_events	Agent Push Events	<QXZ>This setting will enable the sending of events from agent screens to the URL defined below. Default is 0 for disabled.</QXZ>
 settings-agent_push_url	Agent Push URL	<QXZ>If Agent Push Events are enabled above, this is the URL that the events will be sent to. The variables that you can use within the URL are --A--user--B--, --A--event--B--, --A--message--B--, --A--lead_id--B--. Since this function uses AJAX, it must reference a local script on the web server. If you want to reference an external web address then you should use the get2post.php script that can be found in the extras directory.</QXZ>
 settings-log_recording_access	Log Recording Access	<QXZ>This option if enabled allows the logging of user access to call recordings. It also requires the User setting Access Recordings to be set to 1 to allow a user to access call recordings. Default is 0 for disabled.</QXZ>
-settings-mute_recordings	Allow Mute Recordings	<QXZ>This option if enabled allows you to enable the MUTE RECORDING button on the agent screen by campaign and-or user. This feature is only tested with systems running Asterisk 13. Default is 0 for disabled.</QXZ>
+settings-mute_recordings	Allow Mute Recordings	<QXZ>This option if enabled allows you to enable the MUTE RECORDING button on the agent screen by campaign and-or user. This feature is only tested with systems running Asterisk 13. You should not mute recordings for more than 15 minutes at a time. Default is 0 for disabled.</QXZ>
 settings-enable_auto_reports	Enable Automated Reports	<QXZ>This option if enabled allows you access to the Automated Reports section where you can set up reports to run at scheduled times and be delivered by email or FTP. Default is 0 for disabled.</QXZ>
 settings-first_login_trigger	First Login Trigger	<QXZ>This setting allows for the initial configuration of the server screen to be shown to the administrator when they first log into the system.</QXZ>
 settings-default_phone_registration_password	Default Phone Registration Password	<QXZ>This is the default registration password used when new phones are added to the system. Default is test.</QXZ>
